# Electrical-Engineering-Capstone-Design-Project

./: .gitattributes  .gitignore  DepthAnythingV2Frame.ipynb  LICENSE  README.md  comp.py
Software Process Flow Diagram/: processFlow.html
icon_drone/: .gitattributes  build_icondrone.sh
icon_drone/devel/: .catkin  local_setup.fish
icon_drone/devel/include/bspline/: Bspline.h
icon_drone/devel/include/decomp_ros_msgs/: Ellipsoid.h  EllipsoidArray.h  Polyhedron.h  PolyhedronArray.h
icon_drone/devel/include/quadrotor_msgs/: Bspline.h  GoalSet.h  OptimalTimeAllocator.h  PolynomialTrajectory.h  PositionCommand.h  Px4ctrlDebug.h  Replan.h  ReplanCheck.h  SpatialTemporalTrajectory.h  SwarmCommand.h  SwarmInfo.h  SwarmOdometry.h  TakeoffLand.h  TrajectoryMatrix.h
icon_drone/devel/include/raspicam_node/: CameraConfig.h  MotionVectors.h
icon_drone/devel/include/realsense2_camera/: DeviceInfoResponse.h  Metadata.h
icon_drone/devel/lib/exploration_manager/: exploration_node  fuel_nav  load_obj  write_tsp
icon_drone/devel/lib/fdilink_ahrs/: ahrs_driver  imu_tf
icon_drone/devel/lib/lkh_tsp_solver/: lkh_tsp
icon_drone/devel/lib/pkgconfig/: active_perception.pc  bspline.pc  bspline_opt.pc  camera_models.pc  catkin_simple.pc  cmake_utils.pc  decomp_ros_msgs.pc  decomp_ros_utils.pc  depth_anything.pc  exploration_manager.pc  fdilink_ahrs.pc  global_fusion.pc  lkh_tsp_solver.pc  loop_fusion.pc  orb_slam3_ros.pc  path_searching.pc  plan_env.pc  plan_manage.pc  poly_traj.pc  pose_converter.pc  pose_utils.pc  px4ctrl.pc  quadrotor_msgs.pc  raspicam_node.pc  realsense2_camera.pc  realsense2_description.pc  rviz_plugins.pc  traj_utils.pc  uav_utils.pc  video_recorder.pc  vins.pc  waypoint_generator.pc
icon_drone/devel/lib/plan_env/: obj_generator
icon_drone/devel/lib/plan_manage/: fast_planner_node  proc_msg  proc_msg2  traj_server
icon_drone/devel/lib/raspicam_node/: raspicam_node
icon_drone/devel/lib/traj_utils/: process_msg
icon_drone/devel/lib/waypoint_generator/: waypoint_generator
icon_drone/devel/share/active_perception/cmake/: active_perceptionConfig.cmake
icon_drone/devel/share/bspline/cmake/: bspline-msg-paths.cmake  bsplineConfig.cmake
icon_drone/devel/share/bspline_opt/cmake/: bspline_optConfig.cmake
icon_drone/devel/share/camera_models/cmake/: camera_modelsConfig.cmake
icon_drone/devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig.cmake
icon_drone/devel/share/cmake_utils/cmake/: cmake_utilsConfig.cmake
icon_drone/devel/share/decomp_ros_msgs/cmake/: decomp_ros_msgs-msg-extras.cmake  decomp_ros_msgs-msg-paths.cmake  decomp_ros_msgsConfig.cmake
icon_drone/devel/share/decomp_ros_utils/cmake/: decomp_ros_utilsConfig.cmake
icon_drone/devel/share/depth_anything/cmake/: depth_anythingConfig.cmake
icon_drone/devel/share/exploration_manager/cmake/: exploration_managerConfig.cmake
icon_drone/devel/share/fdilink_ahrs/cmake/: fdilink_ahrsConfig.cmake
icon_drone/devel/share/global_fusion/cmake/: global_fusionConfig.cmake
icon_drone/devel/share/lkh_tsp_solver/cmake/: lkh_tsp_solverConfig.cmake
icon_drone/devel/share/loop_fusion/cmake/: loop_fusionConfig.cmake
icon_drone/devel/share/orb_slam3_ros/cmake/: orb_slam3_rosConfig.cmake
icon_drone/devel/share/path_searching/cmake/: path_searchingConfig.cmake
icon_drone/devel/share/plan_env/cmake/: plan_envConfig.cmake
icon_drone/devel/share/plan_manage/cmake/: plan_manageConfig.cmake
icon_drone/devel/share/poly_traj/cmake/: poly_trajConfig.cmake
icon_drone/devel/share/pose_converter/cmake/: pose_converterConfig.cmake
icon_drone/devel/share/pose_utils/cmake/: pose_utilsConfig.cmake
icon_drone/devel/share/px4ctrl/cmake/: px4ctrlConfig.cmake
icon_drone/icon_drone/shfiles/: rspx4.sh
icon_drone/shfiles/: client.sh  client_orb.sh  init.sh  record_fuel.sh  rspx4.sh  rspx4_remote.sh  save_frames.sh  server.sh  server.sh.save  server_orb.sh  server_realsense.sh  setup.sh
icon_drone/src/depth_anything/: camera_intrinsics.yml
icon_drone/src/depth_anything/checkpoints/: depth_anything_v2_metric_hypersim_vitb.pth  depth_anything_v2_metric_hypersim_vitl.pth  depth_anything_v2_metric_hypersim_vits.pth
icon_drone/src/fdilink_ahrs/data/: gps_data.bag
icon_drone/src/fdilink_ahrs/launch/: ahrs_data.launch
icon_drone/src/fdilink_ahrs/src/: ahrs_driver.cpp
icon_drone/src/realflight_modules/Depth-Anything/: CMakeLists.txt  package.xml
icon_drone/src/realflight_modules/Depth-Anything/nodes/: depth_anything_node.py
icon_drone/src/realflight_modules/ORB_SLAM3/: CMakeLists.txt  default_camera.yaml  package.xml
icon_drone/src/realflight_modules/ORB_SLAM3/Examples/ROS/orb_slam3/: CMakeLists.txt  package.xml
icon_drone/src/realflight_modules/ORB_SLAM3/Examples_old/ROS/ORB_SLAM3/src/: ros_mono_inertial.cc
icon_drone/src/realflight_modules/ORB_SLAM3/src/: ros_mono_inertial.cc
icon_drone/src/realflight_modules/depth_anything/: CMakeLists.txt  package.xml
icon_drone/src/realflight_modules/depth_anything/launch/: depth_anything.launch
icon_drone/src/realflight_modules/depth_anything/nodes/: depth_anything_node.py
icon_drone/src/realflight_modules/pose_converter/: CMakeLists.txt  package.xml
icon_drone/src/realflight_modules/pose_converter/scripts/: pose_converter_node.py
icon_drone/src/realflight_modules/sophus/: CTestConfiguration.ini  CTestTestfile.cmake  Makefile
icon_drone/src/realflight_modules/video_recorder/: CMakeLists.txt  package.xml
icon_drone/src/realflight_modules/video_recorder/launch/: video_recorder.launch
icon_drone/src/realflight_modules/video_recorder/scripts/: video_recorder_node.py
icon_drone/src/utils/pose_utils/: odom2pose.py  package.xml
icon_drone/vins_output/: bias.txt  stamped_traj_estimate.txt
stm32_main/: .cproject  .mxproject  .project  SSL Debug.launch  SSL.ioc
stm32_main/Core/Src/: main.c  stm32f1xx_hal_msp.c
stm32_main/Debug/: SSL.elf  SSL.list  SSL.map  makefile  objects.list
stm32_main/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.su
(+132 files in other folders)
