<?xml version="1.0"?>
<package format="2">
  <name>pose_converter</name>
  <version>1.0.0</version>
  <description>Convert between PoseStamped and Odometry messages</description>
  
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  
  <export></export>
</package>