<?xml version="1.0"?>
<package format="2">
  <name>ORB_SLAM3</name>
  <version>1.0.0</version>
  <description>ORB-SLAM3 RGBD-Inertial ROS wrapper</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>

